--- a/styles/sponsors.css
+++ b/styles/sponsors.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxanium&display=swap');
 #sponsors {
-    padding: 10%;
+    padding: 5% 10%;
 }
 
 .sponsor-container,
@@ -20,11 +20,12 @@
 }
 
 .heading {
-    padding: 10px;
-    width: 250px;
+    padding: 30px;
+    width: 350px;
     height: 50px;
-    margin-bottom: 50px;
-    background-color: #38D9A9;
+    margin-bottom: 20px;
+    color: #38D9A9;
+    background-color: #111;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,7 +43,7 @@
     content: '';
     width: 100%;
     height: 5px;
-    background-color: #38B3C2;
+    background-color: #38D9A9;
     position: absolute;
     margin-bottom: -3px;
     left: 0;
