--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -18,7 +18,7 @@
     align-items: center;
     text-align: center;
     border-radius: 20px;
-    box-shadow: 0 3px 3px rgba(105, 105, 105, 1);
+    box-shadow: 0 8px 10px rgba(105, 105, 105, 1);
 }
 
 .date-links {
@@ -133,6 +133,10 @@
 }
 
 @media only screen and (max-width: 768px) {
+    .timeline-main>h1 {
+        width: 100%;
+        font-size: xx-large;
+    }
     .timeline {
         position: relative;
         top: -50px;
