--- a/styles/about.css
+++ b/styles/about.css
@@ -3,4 +3,28 @@
     height: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
+}
+
+@media only screen and (max-width: 768px) {
+    .about-container {
+        margin: 0 !important;
+        flex-direction: column;
+        text-align: center;
+    }
+    #about-content {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+    #about-content p {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+    #about-content h2 {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+    }
+    #carouselExampleControls {
+        display: none;
+    }
 }
