--- a/styles/sponsors.css
+++ b/styles/sponsors.css
@@ -83,9 +83,9 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: black;
+    background-color: white;
     border: solid 2px none;
-    box-shadow: 0 3px 3px rgba(105, 105, 105, 0.3);
+    box-shadow: 0 5px 10px rgba(105, 105, 105, 0.3);
     transition: all 0.1s ease;
     Z-index: 1;
     cursor: pointer;
@@ -112,5 +112,15 @@
 }
 
 .sponsor-row:hover .logo_content {
-    color: white;
+    color: black;
+}
+
+@media only screen and (max-width: 768px) {
+    .sponsor-row {
+        border-radius: 12px;
+        background-color: white;
+    }
+    .sponsor-row .logo_content {
+        color: black;
+    }
 }
