--- a/styles/style.css
+++ b/styles/style.css
@@ -97,7 +97,7 @@
 .   ====================================*/
 
 #hero {
-    background: url("images/background.jpg") no-repeat center center fixed;
+    background: url("../images/background.jpg") no-repeat center center fixed;
     background-size: cover;
     margin: 0px;
     padding: 0px;
